...
    <string name="action_settings">Settings</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_replay">Replay</string>
    <string name="action_new">New</string>
    <string name="action_hint">Hint</string>
    <string name="action_suggested">Suggested</string>
    <string name="action_undo">Undo</string>
    <string name="action_close">Close</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_new_game">New Game</string>
    <string name="action_cancel">Cancel</string>
    <string name="rank_ace">Ace</string>
    <string name="rank_two">Two</string>
...
